// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


// oc is generated by openconfig/lib/go/structs/codegen/commongen.go
// as a protobuf representation of a YANG schema.
//
// Schema compression enabled: false
// Input schema modules:
//  - hercules-bcm-chip.yang
//  - hercules-chassis.yang
//  - hercules-extensions.yang
//  - hercules-interface-flow-params.yang
//  - hercules-interface.yang
//  - hercules-linecard.yang
//  - hercules-node-flow-params.yang
//  - hercules-node.yang
//  - hercules-platform.yang
//  - hercules-port.yang
// Include paths:
//   - ...
syntax = "proto3";

package oc.Bcm;

import "stratum/public/proto/yang_wrappers.proto";

// Components.Component.Chassis represents the
// /openconfig-platform/components/component/chassis YANG schema element.
message Chassis {
  // Components.Component.Chassis.Config represents the
  // /openconfig-platform/components/component/chassis/config YANG schema
  // element.
  message Config {
    // Components.Component.Chassis.Conf.ConfigParams represents the
    // /openconfig-platform/components/component/chassis/conf/config-params
    // YANG schema element.
    message ConfigParams {
    }

    // Components.Component.Chassis.Conf.NodeIdToRateLimitConfig represents
    // the
    // /openconfig-platform/components/component/chassis/conf/node_id_to_rate_limit_config
    // YANG schema element.
    message NodeIdToRateLimitConfig {
      // Components.Component.Chassis.Conf.NodeIdToRateLimitConfig.PerCosRateLimitConfigs
      // represents the
      // /openconfig-platform/components/component/chassis/conf/node_id_to_rate_limit_config/per_cos_rate_limit_configs
      // YANG schema element.
      message PerCosRateLimitConfigs {
        ywrappers.Int32Value id = 1;  //[(yext.path) = "id"];
        ywrappers.Int32Value max_rate_pps =
            2;  //[(yext.path) = "max_rate_pps"];
        ywrappers.Int32Value max_burst_pkts =
            3;  //[(yext.path) = "max_burst_pkts"];
      }

      ywrappers.Int32Value max_burst_pkts =
          1;  //[(yext.path) = "max_burst_pkts"];
      map<int32, PerCosRateLimitConfigs> per_cos_rate_limit_configs =
          2;  //[(yext.path) = "per_cos_rate_limit_configs"];
      ywrappers.Uint64Value node_uid = 3;     //[(yext.path) = "node_uid"];
      ywrappers.Int32Value max_rate_pps = 4;  //[(yext.path) = "max_rate_pps"];
    }

    // Components.Component.Chassis.Conf.NodeIdToRxConfig represents the
    // /openconfig-platform/components/component/chassis/conf/node_id_to_rx_config
    // YANG schema element.
    message NodeIdToRxConfig {
      // Components.Component.Chassis.Conf.NodeIdToRxConfig.DmaChannelConfigs
      // represents the
      // /openconfig-platform/components/component/chassis/conf/node_id_to_rx_config/dma_channel_configs
      // YANG schema element.
      message DmaChannelConfigs {
        ywrappers.BoolValue strip_vlan = 1;  //[(yext.path) = "strip_vlan"];
        ywrappers.BoolValue oversized_packets_ok =
            2;  //[(yext.path) = "oversized_packets_ok"];
        ywrappers.BoolValue no_pkt_parsing =
            3;  //[(yext.path) = "no_pkt_parsing"];
        repeated ywrappers.Int32Value cos_set = 4;  //[(yext.path) = "cos_set"];
        ywrappers.Int32Value id = 5;                //[(yext.path) = "id"];
        ywrappers.Int32Value chains = 6;            //[(yext.path) = "chains"];
        ywrappers.BoolValue strip_crc = 7;  //[(yext.path) = "strip_crc"];
      }

      ywrappers.Int32Value max_burst_pkts =
          1;  //[(yext.path) = "max_burst_pkts"];
      ywrappers.Int32Value rx_pool_bytes_per_pkt =
          2;  //[(yext.path) = "rx_pool_bytes_per_pkt"];
      ywrappers.Int32Value max_pkt_size_bytes =
          3;  //[(yext.path) = "max_pkt_size_bytes"];
      ywrappers.Int32Value pkts_per_chain =
          4;  //[(yext.path) = "pkts_per_chain"];
      ywrappers.Int32Value max_rate_pps = 5;  //[(yext.path) = "max_rate_pps"];
      ywrappers.Uint64Value node_uid = 6;     //[(yext.path) = "node_uid"];
      ywrappers.Int32Value rx_pool_pkt_count =
          7;  //[(yext.path) = "rx_pool_pkt_count"];
      ywrappers.BoolValue use_interrupt = 8;  //[(yext.path) = "use_interrupt"];
      map<int32, DmaChannelConfigs> dma_channel_configs =
          9;  //[(yext.path) = "dma_channel_configs"];
    }

    // Components.Component.Chassis.Conf.NodeIdToTxConfig represents the
    // /openconfig-platform/components/component/chassis/conf/node_id_to_tx_config
    // YANG schema element.
    message NodeIdToTxConfig {
      ywrappers.Uint64Value node_uid = 1;  //[(yext.path) = "node_uid"];
    }

    // Components.Component.Chassis.Conf.NodeIdToKnetConfig represents the
    // /openconfig-platform/components/component/chassis/conf/node_id_to_knet_config
    // YANG schema element.
    message NodeIdToKnetConfig {
      // Components.Component.Chassis.Conf.NodeIdToKnetConfig.KnetIntfConfigs
      // represents the
      // /openconfig-platform/components/component/chassis/conf/node_id_to_knet_config/knet_intf_configs
      // YANG schema element.
      message KnetIntfConfigs {
        ywrappers.Int32Value vlan = 1;  //[(yext.path) = "vlan"];
        HerculesBcmChip.BcmKnetIfPurpose purpose =
            2;                               //[(yext.path) = "purpose"];
        ywrappers.Int32Value id = 3;         //[(yext.path) = "id"];
        ywrappers.Int32Value mtu = 4;        //[(yext.path) = "mtu"];
        ywrappers.Int32Value cpu_queue = 5;  //[(yext.path) = "cpu_queue"];
      }

      map<int32, KnetIntfConfigs> knet_intf_configs =
          1;  //[(yext.path) = "knet_intf_configs"];
      ywrappers.Uint64Value node_uid = 2;  //[(yext.path) = "node_uid"];
    }

    map<uint64, NodeIdToTxConfig> node_id_to_tx_config =
        1;  //[(yext.path) = "node_id_to_tx_config"];
    map<uint64, NodeIdToRateLimitConfig> node_id_to_rate_limit_config =
        2;  //[(yext.path) = "node_id_to_rate_limit_config"];
    ywrappers.StringValue bcm_chassis_map_id =
        3;  //[(yext.path) = "bcm_chassis_map_id"];
    map<uint64, NodeIdToKnetConfig> node_id_to_knet_config =
        4;  //[(yext.path) = "node_id_to_knet_config"];
    map<uint64, NodeIdToRxConfig> node_id_to_rx_config =
        5;  //[(yext.path) = "node_id_to_rx_config"];
    HerculesChassis.Platform platform = 6;  //[(yext.path) = "platform"];
    ConfigParams config_params = 7;         //[(yext.path) = "config-params"];
  }

  // Components.Component.Chassis.State represents the
  // /openconfig-platform/components/component/chassis/state YANG schema
  // element.
  message State {
    // Components.Component.Chassis.State.ConfigParams represents the
    // /openconfig-platform/components/component/chassis/state/config-params
    // YANG schema element.
    message ConfigParams {
    }

    // Components.Component.Chassis.State.NodeIdToKnetConfig represents the
    // /openconfig-platform/components/component/chassis/state/node_id_to_knet_config
    // YANG schema element.
    message NodeIdToKnetConfig {
      // Components.Component.Chassis.State.NodeIdToKnetConfig.KnetIntfConfigs
      // represents the
      // /openconfig-platform/components/component/chassis/state/node_id_to_knet_config/knet_intf_configs
      // YANG schema element.
      message KnetIntfConfigs {
        ywrappers.Int32Value mtu = 1;        //[(yext.path) = "mtu"];
        ywrappers.Int32Value cpu_queue = 2;  //[(yext.path) = "cpu_queue"];
        ywrappers.Int32Value vlan = 3;       //[(yext.path) = "vlan"];
        HerculesBcmChip.BcmKnetIfPurpose purpose =
            4;                        //[(yext.path) = "purpose"];
        ywrappers.Int32Value id = 5;  //[(yext.path) = "id"];
      }

      map<int32, KnetIntfConfigs> knet_intf_configs =
          1;  //[(yext.path) = "knet_intf_configs"];
      ywrappers.Uint64Value node_uid = 2;  //[(yext.path) = "node_uid"];
    }

    // Components.Component.Chassis.State.NodeIdToRateLimitConfig represents
    // the
    // /openconfig-platform/components/component/chassis/state/node_id_to_rate_limit_config
    // YANG schema element.
    message NodeIdToRateLimitConfig {
      // Components.Component.Chassis.State.NodeIdToRateLimitConfig.PerCosRateLimitConfigs
      // represents the
      // /openconfig-platform/components/component/chassis/state/node_id_to_rate_limit_config/per_cos_rate_limit_configs
      // YANG schema element.
      message PerCosRateLimitConfigs {
        ywrappers.Int32Value id = 1;  //[(yext.path) = "id"];
        ywrappers.Int32Value max_rate_pps =
            2;  //[(yext.path) = "max_rate_pps"];
        ywrappers.Int32Value max_burst_pkts =
            3;  //[(yext.path) = "max_burst_pkts"];
      }

      ywrappers.Int32Value max_rate_pps = 1;  //[(yext.path) = "max_rate_pps"];
      ywrappers.Int32Value max_burst_pkts =
          2;  //[(yext.path) = "max_burst_pkts"];
      map<uint64, PerCosRateLimitConfigs> per_cos_rate_limit_configs =
          3;  //[(yext.path) = "per_cos_rate_limit_configs"];
      ywrappers.Uint64Value node_uid = 4;  //[(yext.path) = "node_uid"];
    }

    // Components.Component.Chassis.State.NodeIdToTxConfig represents the
    // /openconfig-platform/components/component/chassis/state/node_id_to_tx_config
    // YANG schema element.
    message NodeIdToTxConfig {
      ywrappers.Uint64Value node_uid = 1;  //[(yext.path) = "node_uid"];
    }

    // Components.Component.Chassis.State.NodeIdToRxConfig represents the
    // /openconfig-platform/components/component/chassis/state/node_id_to_rx_config
    // YANG schema element.
    message NodeIdToRxConfig {
      // Components.Component.Chassis.State.NodeIdToRxConfig.DmaChannelConfigs
      // represents the
      // /openconfig-platform/components/component/chassis/state/node_id_to_rx_config/dma_channel_configs
      // YANG schema element.
      message DmaChannelConfigs {
        ywrappers.Int32Value chains = 1;     //[(yext.path) = "chains"];
        ywrappers.BoolValue stript_crc = 2;  //[(yext.path) = "stript_crc"];
        ywrappers.BoolValue strip_vlan = 3;  //[(yext.path) = "strip_vlan"];
        ywrappers.BoolValue oversized_packets_ok =
            4;  //[(yext.path) = "oversized_packets_ok"];
        ywrappers.BoolValue no_pkt_parsing =
            5;  //[(yext.path) = "no_pkt_parsing"];
        repeated ywrappers.Int32Value cos_set = 6;  //[(yext.path) = "cos_set"];
        ywrappers.Int32Value id = 7;                //[(yext.path) = "id"];
      }

      ywrappers.BoolValue use_interrupt = 1;  //[(yext.path) = "use_interrupt"];
      ywrappers.Int32Value rx_pool_bytes_per_pkt =
          2;  //[(yext.path) = "rx_pool_bytes_per_pkt"];
      map<int32, DmaChannelConfigs> dma_channel_configs =
          3;  //[(yext.path) = "dma_channel_configs"];
      ywrappers.Int32Value pkts_per_chain =
          4;  //[(yext.path) = "pkts_per_chain"];
      ywrappers.Int32Value max_pkt_size_bytes =
          5;  //[(yext.path) = "max_pkt_size_bytes"];
      ywrappers.Uint64Value node_uid = 6;  //[(yext.path) = "node_uid"];
      ywrappers.Int32Value rx_pool_pkt_count =
          7;  //[(yext.path) = "rx_pool_pkt_count"];
      ywrappers.Int32Value max_burst_pkts =
          8;  //[(yext.path) = "max_burst_pkts"];
      ywrappers.Int32Value max_rate_pps = 9;  //[(yext.path) = "max_rate_pps"];
    }

    map<uint64, NodeIdToRxConfig> node_id_to_rx_config =
        1;  //[(yext.path) = "node_id_to_rx_config"];
    map<uint64, NodeIdToTxConfig> node_id_to_tx_config =
        2;  //[(yext.path) = "node_id_to_tx_config"];
    map<uint64, NodeIdToRateLimitConfig> node_id_to_rate_limit_config =
        3;  //[(yext.path) = "node_id_to_rate_limit_config"];
    HerculesChassis.Platform platform = 4;  //[(yext.path) = "platform"];
    ConfigParams config_params = 5;         //[(yext.path) = "config-params"];
    ywrappers.StringValue bcm_chassis_map_id =
        6;  //[(yext.path) = "bcm_chassis_map_id"];
    map<uint64, NodeIdToKnetConfig> node_id_to_knet_config =
        7;                           //[(yext.path) = "node_id_to_knet_config"];
  }

  Config config = 1;  //[(yext.path) = "config"];
  State state = 2;    //[(yext.path) = "state"];
}

// HerculesBcmChip_BCM_KNET_IF_PURPOSE represents the corresponding enumerated
// node in the YANG schema.
message HerculesBcmChip {
  enum BcmKnetIfPurpose {
    UNSET = 0;
    BCM_KNET_IF_PURPOSE_CONTROLLER = 1;
    BCM_KNET_IF_PURPOSE_SFLOW = 2;
    BCM_KNET_IF_PURPOSE_UNKNOWN = 3;
  }
}

// HerculesChassis.PLATFORM represents the corresponding enumerated node in the
// YANG schema.
message HerculesChassis {
  enum Platform {
    UNSET = 0;
    MLNX_SN2700 = 2;
    P4_SOFT_SWITCH = 3;
  }
}
